--- a/index.html
+++ b/index.html
@@ -79,17 +79,94 @@
 <body>
   <h1>Juan Sebastián Zapata-Mujica</h1>
   <div class="tabs">
+    <button class="tab" id="inicio-tab" onclick="showTab('inicio')">Inicio</button>
     <button class="tab" id="bio-tab" onclick="showTab('bio')">Bio</button>
-    <button class="tab" id="publicaciones-tab" onclick="showTab('publicaciones')">Publicaciones</button>
-    <button class="tab" id="traducciones-tab" onclick="showTab('traducciones')">Traducciones académicas</button>
+    <button class="tab" id="publicaciones-tab" onclick="showTab('publicaciones')">Investigación</button>
+    <button class="tab" id="traducciones-tab" onclick="showTab('traducciones')">Fotografía</button>
+    <button class="tab" id="medios-tab" onclick="showTab('medios')">Medios</button>
+    
+  </div>
+  <div id="inicio" class="tab-content">
+
+    <div style="text-align:center; margin-bottom:2em;">
+      <div style="font-size: 1.08em; color: #333; margin: 1.5em auto 1em auto; max-width: 500px;">Investigador social interezado en el problema del desarrollo histórico del pensamiento humano. Fotógrafo.</div>
+      <img src="imagenes/DSC_85972.JPG" alt="Trabajo de campo 2020, Yo'sagaka" style="max-width: 100%; width: 800px; margin: 0 auto; display: block; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.10);">
+      <div style="font-size: 0.85em; color: #555; margin-top: 0.5em; font-style: italic;">
+        Trabajo de campo 2020, Yo'sagaka, Duerungekʉn, Resguardo Indígena Arhuaco, Sierra Nevada de Santa Marta, Colombia.<br>
+        Foto: Santiago Dussan.
+      </div>
+    </div>
+  </div>
+  <div id="medios" class="tab-content">
+    <h3 style="margin-top:2em;">Entrevistas</h3>
+    <ul>
+      <li><a href="https://www.academia.edu/127064665/Sacredness_means_forbiddenness_Interview_with_Juan_Sebasti%C3%A1n_Zapata_Mujica" target="_blank"><em>Sacredness means forbiddenness</em></a> by  Jaroslava Šnajberková for Diário Digital de Bordo (2024)</li>
+      <li><a href="https://vistprojects.com/en/misses-in-the-sierra-nevada-de-santa-marta/" target="_blank"><em>Misses in the Sierra Nevada de Santa Marta</em></a> by Marcela Vallejo for Vist Projects (2021)</li>
+      <li><a href="https://www.eltiempo.com/cultura/cine-y-tv/quienes-eran-las-senoritas-misioneras-que-cambiaron-la-sierra-nevada-633773" target="_blank"><em>La historia desconocida de 'las señoritas', las misioneras que cambiaron la Sierra Nevada.</em></a> por Simón Granja para El Tiempo. (2021)</li>
+      <li><a href="https://www.elespectador.com/colombia-20/paz-y-memoria/una-memoria-subterranea-en-la-sierra-nevada/" target="_blank"><em>Una memoria subterránea en la Sierra Nevada</em></a> por Miguel Estupiñán para El Espectador. (2021)</li>
+      <li><a href="https://cartelurbano.com/historias/educacion-popular-en-bogota-asi-se-descentraliza-la-ensenanza-que-nos-niega-el-estado" target="_blank"><em>Educación popular en Bogotá: así se descentraliza la enseñanza que nos niega el Estado</em></a> por Carolina Romero para Cartel Urbano (2017)</li>
+    </ul>
+    <h3 style="margin-top:2em;">Opinión</h3>
+    <ul>
+      <li><a href="https://www.lacoladerata.co/opinion/analisis/bailando-sobre-la-tumba-de-la-antropologia-avestruciana/" target="_blank"><em>Bailando sobre la tumba de la antropología avestruciana</em></a> La Cola de Rata (2022)</li>
+      <li><a href="https://www.lacoladerata.co/cultura/preguntas-en-la-taiga/" target="_blank"><em>Preguntas en la taiga</em></a> La Cola de Rata (2022)</li>
+      <li><a href="https://www.lacoladerata.co/cultura/relatos/siete-canciones-para-ir-y-volver/" target="_blank"><em>Siete canciones para ir y volver a la Sierra Nevada</em></a> La Cola de Rata (2021)</li>
+      <li><a href="https://linotipia.com/visita-a-las-senoritas-imprescindibles/" target="_blank"><em>Visita a Las Señoritas imprescindibles</em></a> Linotipia (2021)</li>
+    </ul>
+  </div>
+  <div id="traducciones" class="tab-content">
+    <blockquote style="margin-top:1.5em; font-size:1.13em; color:#444; border-left:4px solid #bbb; padding-left:1em; font-style:italic; background:#f5f5f5;">“La fotografía es una cacería: el instinto de cazar sin el impulso de matar. Es la cacería de los ángeles. Acechas, apuntas, disparas - click. Y en lugar de muerte, haces algo eterno”<br><span style="font-size:0.98em; font-style:normal; color:#666;">Chris Marker</span></blockquote>
+    <p style="margin-top:1.5em; font-size:1.07em; color:#333;">
+      En el colegio recibí clases de fotografía pinhole y conocí algunos principios como la ley de tercios, el triángulo de exposición y el tipo de planos posibles en un retrato. En la universidad fui inspirado por las fotografías de Daniel Mateus y Santiago Dussán. Decidí usar la fotografía analógica como herramienta de investigación etnográfica, apoyándome en ella para registrar detalladamente escenas de la cotidianidad de la vida indígena. Usé fotografía analógica entre 2015 y 2022, cuando vendí mi cámara de carrete para viajar a Brasil. Desde entonces sólo disparo digital.<br>
+      Disfruto mucho la fotografía documental, callejera, de reportería y toda aquella que tradicionalmente se presenta en blanco y negro. Tengo en mente autores como Koudelka, Reichel-Dolmatoff (sí, sus fotos), EGAR (Efraín García Abadía), Jorge Silva (a través del cine desarrollado con Marta Rodríguez), Álvaro Ybarra Zabala, Paz Errázuriz y Gerda Taro, entre muchos otros. También me gusta pasar tiempo observando fotografía de fauna y astrofotografía, estas últimas a color (salvo las de George Shiras, que son a blanco y negro y tremendamente inspiradoras).<br>
+      Me interesa estudiar fotografía, pero encuentro más llamativo lo que pueda decir Ansel Adams que lo que pueda decir Fontcuberta. Es decir, me parece más interesante el disfrute estético y la técnica de la luz, que el análisis crítico con foco en la representación.<br><br>
+      Algunas de mis fotografías han sido publicadas por <strong>El Tiempo</strong>, <strong>Semanario Voz</strong> y <strong>Cartel Urbano</strong>.<br>
+      Fotografía<br>
+      Otras han sido portada de revistas académicas como <a href="https://revistas.javeriana.edu.co/index.php/univhumanistica/issue/view/1344" target="_blank">Revista Universitas Humanística edición 86</a>, <a href="https://www.macrohistoria.com/index.php/mch/issue/view/numero-7" target="_blank">Revista Macrohistoria edición 7</a> y primera edición de El Arado, Revista de estudiantes de antropología de la Pontificia Universidad Javeriana
+    </p>
+    <h3 style="margin-top:2em;">Ensayos</h3>
+    <ul style="list-style-type:none; padding-left:0;">
+      <li><span style="font-size:1.2em; vertical-align:middle;">&#128247;</span> <a href="https://www.filmshooterscollective.com/analog-film-photography-blog/action-research-film-photography-and-mirrors-of-time-for-indigenous-people-by-juansebastin-zapata-mujica-8-23" target="_blank"><em>Action Research, Film Photography and Mirrors of Time for Indigenous People</em></a> Film Shooters Collective (2018)</li>
+    </ul>
+    <h3 style="margin-top:2em;">Distinciones</h3>
+    <ul>
+      <li>Primer lugar concurso nacional de fotografía analógica VI Encuentro de Fotografía Palmira (<a href="https://fb.watch/7ScECVCSiQ/" target="_blank">2021</a>)</li>
+      <li>Selección final 24 Concurso de fotografía documental <em>Los trabajos y los días</em>. Categoría Niñez trabajadora, con la serie fotográfica (x4) Pequeños iku, grandes trabajos. (2018)</li>
+      <li>Selección final 28 Concurso de fotografía documental <em>Los trabajos y los días</em>. Categoría economía del cuidado, con la serie fotográfica (x3) Buscar el equilibrio y establecer el acuerdo (2022)</li>
+      <li>Online Group Exhibition "Visual Audio" (winter 2019) in <a href="https://www.analogforevermagazine.com/online-exhibitions/visual-audio-june-2019" target="_blank">Analog Forever Magazine</a> curated by Michael Kirchoff with the photo <em>Iku shaman Bernardo Torres</em></li>
+    </ul>
+    <h3 style="margin-top:2em;">Multimedia</h3>
+    <ul>
+      <li>
+        <span style="font-style:italic;">Skampida - Vida triste y hermosa (music video)</span>
+        <div style="max-width: 480px;">
+          <iframe width="100%" height="270" src="https://www.youtube.com/embed/gbT85VlcLXY" title="Skampida - Vida triste y hermosa (music video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </li>
+      <li>
+        <span style="font-style:italic;">Mi perro muerto</span>
+        <div style="max-width: 480px;">
+          <iframe width="100%" height="270" src="https://www.youtube.com/embed/ht5MbnvsjBo" title="Fotopoestía Mi perro muerto" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </li>
+    </ul>
   </div>
   <div id="bio" class="tab-content">
     <div style="display:flex; align-items:flex-start; margin-bottom:1.5em;">
       <div style="flex:0 0 180px; text-align:left;">
         <img src="imagenes/profile big.jpg" alt="Foto de Juan Sebastián Zapata-Mujica" style="max-width:180px; width:100%; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.08);">
         <div style="margin-top:1em; font-size:0.98em; color:#444;">
-          <div style="margin-bottom:0.4em;"><span style="font-size:1.1em; vertical-align:middle; color:#d32f2f;">&#128205;</span> São Paulo</div>
+          <div style="margin-bottom:0.4em;"><span style="font-size:1.1em; vertical-align:middle; color:#d32f2f;">&#128205;</span> São Paulo, Brazil</div>
           <div><span style="font-size:1.1em; vertical-align:middle; color:#004080;">&#9993;</span> <a href="mailto:zapatamujica@usp.br" style="color:#004080;">zapatamujica@usp.br</a></div>
+          <div style="margin-top:0.4em;"><span style="font-size:1.1em; vertical-align:middle; color:#222;">&#128247;</span> <a href="https://www.flickr.com/photos/199411145@N08/albums" target="_blank" style="color:black;">flickr</a></div>
+          <div style="margin-top:0.4em;"><span style="vertical-align:middle; display:inline-block; width:1.2em; height:1.2em;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="1em" height="1em" style="vertical-align:middle;"><g fill="none" stroke="black" stroke-width="2"><path d="M25 25 Q10 10 5 25 Q10 40 25 25 Q40 40 45 25 Q40 10 25 25 Z" fill="white"/><circle cx="25" cy="25" r="3" fill="black"/></g></svg></span> <a href="https://bsky.app/profile/enganhifa.bsky.social" target="_blank" style="color:black;">BlueSky</a></div>
+          <div style="margin-top:0.4em;"><span style="vertical-align:middle; display:inline-block; width:1.2em; height:1.2em;">
+            <svg width="1em" height="1em" viewBox="0 0 32 32" style="vertical-align:middle;">
+              <circle cx="16" cy="16" r="16" fill="#a6ce39"/>
+              <text x="8" y="22" font-size="13" font-family="Arial, Helvetica, sans-serif" fill="#fff" font-weight="bold">iD</text>
+            </svg>
+          </span> <a href="https://orcid.org/0000-0001-9751-7070" target="_blank" style="color:black;">ORCID</a></div>
+          <div style="margin-top:0.4em;"><span style="font-size:1.1em; vertical-align:middle; color:#004080;">&#127891;</span> <a href="https://usp-br.academia.edu/JuanSebasti%C3%A1nZapataMujica" target="_blank" style="color:black;">Academia.edu</a></div>
         </div>
       </div>
       <div style="flex:1; margin-left:2em;">
@@ -107,20 +184,44 @@
       <li><strong>Zapata-Mujica, J.S.</strong> &amp; <strong>Ariza Salinas, L.C.</strong> (2021). <a href="https://revistaleca.org/index.php/leca/article/view/67" target="_blank"><em>Güía-Yina Tosi: Cacería de Hermanos Mayores</em></a>. <em>Revista latinoamericana de estudios críticos animales</em>.</li>
       <li><strong>Zapata-Mujica, J.S.</strong> (2019). <a href="https://revistas.unal.edu.co/index.php/maguare/article/view/82994" target="_blank"><em>Jugando con ratas: observación participante desde la cloaca</em></a>. <em>Maguaré</em>.</li>
     </ul>
+
     <h3>Libros</h3>
     <ul style="list-style-type:none; padding-left:0;">
       <li><span style="color:black; font-size:1em; vertical-align:middle;">&#9733;</span> <strong>Zapata-Mujica, J.S.</strong> (2022). <a href="https://www.academia.edu/74335306/Cacicazgos_desvanecientes_Organizaci%C3%B3n_y_cambio_social_entre_los_ik%CA%89_de_la_zona_oriental_de_la_Sierra_Nevada_de_Santa_Marta" target="_blank"><em>Cacicazgos desvanecientes. Organización y cambio social entre los ikʉ de la zona oriental de la Sierra Nevada de Santa Marta</em></a>. Sororoca Livros.</li>
     </ul>
-    <h3>Divulgación</h3>
-    <ul>
-      <!-- Agrega aquí publicaciones de divulgación -->
-    </ul>
-  </div>
 
-  <div id="traducciones" class="tab-content">
+    <h3>Traducciones académicas</h3>
     <ul>
       <li><strong>Oesterdiekhoff, G.</strong> (2023, trad. del manuscrito original en inglés al español por Zapata-Mujica, J.S.). <a href="https://www.macrohistoria.com/index.php/mch/article/view/Oesterdiekhoff-teoria-genetico" target="_blank"><em>El programa de la teoría genético-estructural como teoría fundamental de la historia, las ciencias sociales y las humanidades</em></a>. <em>Macrohistoria</em>.</li>
     </ul>
+
+    <h3>Conferencias</h3>
+    <ul>
+      <li><a href="https://youtu.be/4qslFg96r5U" target="_blank"><em>Ontogenesis of Agricultural Development: A Piagetian Contribution to Explaining Historical-Cultural Change</em></a>. Conferencia impartida por la profesora Zélia Ramozzi-Chiarottino y Juan Sebastián Zapata-Mujica para el 54th Annual Meeting of The Jean Piaget Society, Belgrado, Serbia (2025)</li>
+      <li><a href="https://www.youtube.com/watch?v=TgtLilCa7zA&t=3837s" target="_blank"><em>Sobre o desenvolvimento histórico da psicogênese</em></a>. Seminário no Grupo de Filosofia e Epistemologia Genética. Marília, Brasil (2025)</li>
+      <li><a href="https://www.academia.edu/123035879/Etnograf%C3%ADa_psicogen%C3%A9tica_Reconstrucci%C3%B3n_del_proceso_de_diferenciaci%C3%B3n_cognitiva_de_dos_sociedades_en_la_Sierra_Nevada_de_Santa_Marta" target="_blank"><em>Etnografía psicogenética. Reconstrucción del proceso de diferenciación cognitiva de dos sociedades en la Sierra Nevada de Santa Marta.</em></a>. Congreso de la  Asosiación Latinoamericana de Antropología ALA. Rosario, Argentina (2024)</li>
+      <li><a href="https://www.youtube.com/watch?v=-FvAvE0K6qg&embeds_referring_euri=https%3A%2F%2Fwww.academia.edu%2F&embeds_referring_origin=http%3A%2F%2Facademia.edu" target="_blank"><em>Máscaras kogi de las danzas del Tani-cansamaría vistas desde los archivos etnográficos de USEMI</em></a>. Presentación hecha el jueves 6 de junio de 2024 en el Coloquio internacional HITAL coautoría con Santiago Forero Bedoya. Medellín, Colombia (2024)</li>
+      <li><a href="https://www.youtube.com/watch?v=gNp89TF2U2Q&embeds_referring_euri=https%3A%2F%2Fwww.academia.edu%2F&embeds_referring_origin=http%3A%2F%2Facademia.edu" target="_blank"><em>Desarrollo histórico de los procesos cognitivos en SNSM. Paralelos entre psicogénesis y arqueología.</em></a>. XX Simposio Internacional Procesos Civilizadores, "Procesos sociales y civilizaciones latinoamericanas." Cochabamba, Bolivia (2024)</li>
+      <li><a href="https://www.youtube.com/watch?v=QXz0l6G-c2Q&embeds_referring_euri=https%3A%2F%2Fwww.academia.edu%2F&embeds_referring_origin=http%3A%2F%2Facademia.edu" target="_blank"><em>Diálogos visuales: Las Señoritas, antropología visual en acción. Sierra Nevada de Santa Marta.</em></a>. Conversatorio organizado por el Capítulo de Egresados de Antropología de la Universidad de los Andes moderado por Yezid Campos. Bogotá, Colombia (2021)</li>
+      <li><a href="https://www.youtube.com/watch?v=q0s0ROwqdbQ" target="_blank"><em>Mentalidad primitiva, cosas concepto y ontologías radicales: antropología cognitiva através del caso kogi</em></a>. Invitado como ponente principal VII Jornadas Filosóficas "Filosofía para hoy: problemas y retos" Escuela de Filosofía Universidad Industrial de Santander. Bucaramanga, Colombia (2021)</li>
+      <li><a href="https://www.youtube.com/watch?v=yHps082hPHw&embeds_referring_euri=https%3A%2F%2Fwww.academia.edu%2F&embeds_referring_origin=http%3A%2F%2Facademia.edu" target="_blank"><em>De Aritama a Atánquez: comparación etnográfica tras seis décadas de "The People of Aritama" de Alicia Dussan de Reichel y Gerardo Reichel-Dolmatoff</em></a>. XXI Ciclo de Conferencias Posgrados en Antropología Universidad Nacional de Colombia. Perspectivas antropológicas e investigación social. Bogotá, Colombia (2020)</li>
+      <li><a href="https://www.youtube.com/watch?v=V6Dt7BuEV3g&embeds_referring_euri=https%3A%2F%2Fwww.academia.edu%2F&embeds_referring_origin=http%3A%2F%2Facademia.edu" target="_blank"><em>Comportamiento económico de los indígenas Kogi</em></a>. XVIII Simposio Internacional Procesos Civilizadores. Bogotá, Colombia (2020)</li>
+      <li><a href="https://www.youtube.com/watch?v=Uryq4yumtL8" target="_blank"><em>Cacicazgos desvanecientes. Organización y cambio social entre los iku (sustentación maestría )</em></a>. Jurados: María del Rosario Ferro &amp;  Diana Rosas Riaño. Bogotá, Colombia (2020)</li>
+    </ul>
+
+    <h3>Proyectos actuales</h3>
+    <ul style="list-style-type:none; padding-left:0;">
+      <li>
+        <span style="font-size:1.1em; vertical-align:middle;">&#127909;</span> 
+        <a href="https://www.academia.edu/123251322/Dossier_documental_Las_Se%C3%B1oritas" target="_blank">Las Señoritas Documental</a>
+        <div style="font-size:0.97em; color:#444; margin-top:0.4em;">
+          Desde 2021 trabajo junto a Santiago Dussan, Daniel Velásquez, Daniela Rocha, Santiago Forero, Mamo Bernardo Torres y con la colaboración de muchísimas personas en la producción de este documental. Actualmente (2025) dedicamos seis horas semanales a la postproducción de la película. Tenemos un primer corte de la introducción que, en crudo, tiene alrededor de 35 minutos. Estamos trabajando en el segundo corte.<br><br>
+          En los buscadores de internet puedes encontrar más información con el hashtag <strong>#LasSeñoritasDocumental</strong>, además puedes ver este <a href="https://www.youtube.com/watch?v=R-GUZlFA-s0&t=22s" target="_blank">teaser en YouTube</a>, un <a href="https://www.youtube.com/watch?v=bYxCDBWEKTI&t=4s" target="_blank">detrás de cámaras de la primera parte del rodaje</a>. En las secciones de entrevistas y revistas científicas también puedes encontrar más información.
+        </div>
+      </li>
+    </ul>
   </div>
+
+
 </body>
 </html>
