--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
   <div id="inicio" class="tab-content">
 
     <div style="text-align:center; margin-bottom:2em;">
-      <div style="font-size: 1.08em; color: #333; margin: 1.5em auto 1em auto; max-width: 500px;">Investigador social interezado en el problema del desarrollo histórico del pensamiento humano. Fotógrafo.</div>
+      <div style="font-size: 1.08em; color: #333; margin: 1.5em auto 1em auto; max-width: 500px;">Investigador social interesado en el problema del desarrollo histórico del pensamiento humano. </div>
       <img src="imagenes/DSC_85972.JPG" alt="Trabajo de campo 2020, Yo'sagaka" style="max-width: 100%; width: 800px; margin: 0 auto; display: block; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.10);">
       <div style="font-size: 0.85em; color: #555; margin-top: 0.5em; font-style: italic;">
-        Trabajo de campo 2020, Yo'sagaka, Duerungekʉn, Resguardo Indígena Arhuaco, Sierra Nevada de Santa Marta, Colombia.<br>
+        Junto a Tino y a Yinga, trabajo de campo 2020, Yo'sagaka, Duarungekʉn, Resguardo Indígena Arhuaco, Sierra Nevada de Santa Marta, Colombia.<br>
         Foto: Santiago Dussan.
       </div>
     </div>
@@ -116,14 +116,49 @@
   </div>
   <div id="traducciones" class="tab-content">
     <blockquote style="margin-top:1.5em; font-size:1.13em; color:#444; border-left:4px solid #bbb; padding-left:1em; font-style:italic; background:#f5f5f5;">“La fotografía es una cacería: el instinto de cazar sin el impulso de matar. Es la cacería de los ángeles. Acechas, apuntas, disparas - click. Y en lugar de muerte, haces algo eterno”<br><span style="font-size:0.98em; font-style:normal; color:#666;">Chris Marker</span></blockquote>
-    <p style="margin-top:1.5em; font-size:1.07em; color:#333;">
-      En el colegio recibí clases de fotografía pinhole y conocí algunos principios como la ley de tercios, el triángulo de exposición y el tipo de planos posibles en un retrato. En la universidad fui inspirado por las fotografías de Daniel Mateus y Santiago Dussán. Decidí usar la fotografía analógica como herramienta de investigación etnográfica, apoyándome en ella para registrar detalladamente escenas de la cotidianidad de la vida indígena. Usé fotografía analógica entre 2015 y 2022, cuando vendí mi cámara de carrete para viajar a Brasil. Desde entonces sólo disparo digital.<br>
-      Disfruto mucho la fotografía documental, callejera, de reportería y toda aquella que tradicionalmente se presenta en blanco y negro. Tengo en mente autores como Koudelka, Reichel-Dolmatoff (sí, sus fotos), EGAR (Efraín García Abadía), Jorge Silva (a través del cine desarrollado con Marta Rodríguez), Álvaro Ybarra Zabala, Paz Errázuriz y Gerda Taro, entre muchos otros. También me gusta pasar tiempo observando fotografía de fauna y astrofotografía, estas últimas a color (salvo las de George Shiras, que son a blanco y negro y tremendamente inspiradoras).<br>
-      Me interesa estudiar fotografía, pero encuentro más llamativo lo que pueda decir Ansel Adams que lo que pueda decir Fontcuberta. Es decir, me parece más interesante el disfrute estético y la técnica de la luz, que el análisis crítico con foco en la representación.<br><br>
-      Algunas de mis fotografías han sido publicadas por <strong>El Tiempo</strong>, <strong>Semanario Voz</strong> y <strong>Cartel Urbano</strong>.<br>
-      Fotografía<br>
-      Otras han sido portada de revistas académicas como <a href="https://revistas.javeriana.edu.co/index.php/univhumanistica/issue/view/1344" target="_blank">Revista Universitas Humanística edición 86</a>, <a href="https://www.macrohistoria.com/index.php/mch/issue/view/numero-7" target="_blank">Revista Macrohistoria edición 7</a> y primera edición de El Arado, Revista de estudiantes de antropología de la Pontificia Universidad Javeriana
+
+    <p style="margin-top:1.7em; font-size:1.07em; color:#333;">
+      En el colegio recibí clases de fotografía pinhole, revelé blanco y negro en cuarto oscuro, fui instruido en algunos principios como la ley de tercios, el triángulo de exposición y el tipo de planos posibles en un retrato. En la universidad fui inspirado por las fotografías de Daniel Mateus y Santiago Dussán quienes me estimularon a usar la fotografía analógica como herramienta de investigación etnográfica, apoyándome en ella para registrar detalladamente escenas de la cotidianidad de la vida indígena y avanzar en la construcción de una imagen abarcadora de la sociedad estudiada. <br>
+      Desde 2015 y hasta 2022, usé la fotografía analógica, cuando vendí mi cámara de carrete para irme a vivir fuera de Colombia. Desde entonces sólo disparo digital.<br>
+      Disfruto mucho la fotografía documental, callejera, de reportería y toda aquella que tradicionalmente se presenta en blanco y negro. Tengo en mente autores como Koudelka, Vivian Maier, Reichel-Dolmatoff (sí, sus fotos), EGAR (Efraín García Abadía), Jorge Silva (a través del cine desarrollado con Marta Rodríguez), Walker Evans, Robert Frank, Diane Arbus, Álvaro Ybarra Zabala y Paz Errázuriz, entre muchos otros. <br>
+      También me gusta observar fotografías a color, principalmente de fauna (las de George Shiras, que son a blanco y negro, siempre serán las más inspiradoras), astrofotografía y a veces de paisaje. <br>
+      Del estudio de la fotografía, encuentro más llamativo lo que pueda decir Ansel Adams que Fontcuberta. Es decir, me parece más interesante el disfrute estético y la técnica de la luz, que las cavilaciones críticas con foco en la representación y su siempre relativa estabilidad.<br>
+      Algunas de mis fotografías han sido publicadas por El Tiempo, Semanario Voz y Cartel Urbano. Otras han sido portada de revistas académicas como Revista Universitas Humanística edición 86, Revista Macrohistoria edición 7 y primera edición de El Arado, Revista de estudiantes de antropología de la Pontificia Universidad Javeriana. Sin embargo, no me gano la vida como fotógrafo ni tengo un título que me acredite como profesional en fotografía.
     </p>
+
+    <div id="carousel-foto" style="max-width:420px; margin:2em auto 1.5em auto; text-align:center; position:relative;">
+      <img id="carousel-img" src="imagenes/Universitas Humanística.jpg" alt="Portada Universitas Humanística" style="width:100%; max-width:420px; height:auto; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.10);">
+      <button id="carousel-prev" style="position:absolute; left:0; top:50%; transform:translateY(-50%); background:#fff; border:none; font-size:2em; cursor:pointer; padding:0 0.3em; color:#004080;">&#8592;</button>
+      <button id="carousel-next" style="position:absolute; right:0; top:50%; transform:translateY(-50%); background:#fff; border:none; font-size:2em; cursor:pointer; padding:0 0.3em; color:#004080;">&#8594;</button>
+      <div style="font-size:0.97em; color:#555; margin-top:0.5em;">
+        <span id="carousel-caption">Portada Universitas Humanística, edición 86</span>
+      </div>
+    </div>
+
+    <script>
+      (function() {
+        var images = [
+          {src: 'imagenes/Universitas Humanística.jpg', caption: 'Portada Universitas Humanística, edición 86'},
+          {src: 'imagenes/Macrohistoria.png', caption: 'Portada Revista Macrohistoria, edición 7'},
+          {src: 'imagenes/El Arado ..jpg', caption: 'Portada El Arado, Revista de estudiantes de antropología'}
+        ];
+        var idx = 0;
+        var img = document.getElementById('carousel-img');
+        var caption = document.getElementById('carousel-caption');
+        document.getElementById('carousel-prev').onclick = function() {
+          idx = (idx + images.length - 1) % images.length;
+          img.src = images[idx].src;
+          img.alt = images[idx].caption;
+          caption.textContent = images[idx].caption;
+        };
+        document.getElementById('carousel-next').onclick = function() {
+          idx = (idx + 1) % images.length;
+          img.src = images[idx].src;
+          img.alt = images[idx].caption;
+          caption.textContent = images[idx].caption;
+        };
+      })();
+    </script>
     <h3 style="margin-top:2em;">Ensayos</h3>
     <ul style="list-style-type:none; padding-left:0;">
       <li><span style="font-size:1.2em; vertical-align:middle;">&#128247;</span> <a href="https://www.filmshooterscollective.com/analog-film-photography-blog/action-research-film-photography-and-mirrors-of-time-for-indigenous-people-by-juansebastin-zapata-mujica-8-23" target="_blank"><em>Action Research, Film Photography and Mirrors of Time for Indigenous People</em></a> Film Shooters Collective (2018)</li>
