--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     document.getElementById(tabName + '-tab').classList.add('active');
   }
   window.onload = function() {
-    showTab('bio');
+    showTab('inicio');
   };
 </script>
 <style>
@@ -89,7 +89,7 @@
   <div id="inicio" class="tab-content">
 
     <div style="text-align:center; margin-bottom:2em;">
-      <div style="font-size: 1.08em; color: #333; margin: 1.5em auto 1em auto; max-width: 500px;">Investigador social interesado en el problema del desarrollo histórico del pensamiento humano. </div>
+      <div style="font-size: 1.08em; color: #333; margin: 1.5em auto 1em auto; max-width: 500px;">Investigador social interesado en cómo las formas de organización de la vida humana se desarrollan a lo largo del tiempo.</div>
       <img src="imagenes/DSC_85972.JPG" alt="Trabajo de campo 2020, Yo'sagaka" style="max-width: 100%; width: 800px; margin: 0 auto; display: block; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.10);">
       <div style="font-size: 0.85em; color: #555; margin-top: 0.5em; font-style: italic;">
         Junto a Tino y a Yinga, trabajo de campo 2020, Yo'sagaka, Duarungekʉn, Resguardo Indígena Arhuaco, Sierra Nevada de Santa Marta, Colombia.<br>
