Info  CBS 2025 y cursos libres fotografia

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div style="font-size: 1.08em; color: #333; margin: 1.5em auto 1em auto; max-width: 500px;">Investigador social interesado en cómo las formas de organización de la vida humana se desarrollan a lo largo del tiempo.</div>
       <img src="imagenes/DSC_85972.JPG" alt="Trabajo de campo 2020, Yo'sagaka" style="max-width: 100%; width: 800px; margin: 0 auto; display: block; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.10);">
       <div style="font-size: 0.85em; color: #555; margin-top: 0.5em; font-style: italic;">
-        Junto a Tino (izq) y a Yinga (der), trabajo de campo 2020, Yo'sagaka, Duarungekʉn, Resguardo Indígena Arhuaco, Sierra Nevada de Santa Marta, Colombia.<br>
+        En medio de Tino (izq) y Yinga (der), trabajo de campo 2020, Yo'sagaka, Duarungekʉn, Resguardo Indígena Arhuaco, Sierra Nevada de Santa Marta, Colombia.<br>
         Foto: Santiago Dussan.
       </div>
     </div>
@@ -185,6 +185,12 @@
         </div>
       </li>
     </ul>
+    <h3 style="margin-top:2em;"></h3>
+    <h3 style="margin-top:2em;">Cursos cortos que he tomado</h3>
+    <ul>
+      <li>Fotofilmes, curso no IMS paulista em setembro de 2023.</li>
+      <li>O cinema de Dziga Viértov, curso no CINUSP em março de 2025.</li>
+    </ul>
   </div>
   <div id="bio" class="tab-content">
     <div style="display:flex; align-items:flex-start; margin-bottom:1.5em;">
@@ -232,6 +238,7 @@
 
     <h3>Conferencias</h3>
     <ul>
+      <li><a href="https://youtu.be/Xwq0DlGxo2Q" target="_blank"><em>A Teoria histórico-genética de Günter Dux: Uma nova teoria sociológica geral e sua introdução na América Latina</em></a>. Congresso Brasileiro de Sociologia CBS, São Paulo Brasil (2025)</li>
       <li><a href="https://youtu.be/4qslFg96r5U" target="_blank"><em>Ontogenesis of Agricultural Development: A Piagetian Contribution to Explaining Historical-Cultural Change</em></a>. Conferencia impartida por la profesora Zélia Ramozzi-Chiarottino y Juan Sebastián Zapata-Mujica para el 54th Annual Meeting of The Jean Piaget Society, Belgrado, Serbia (2025)</li>
       <li><a href="https://www.youtube.com/watch?v=TgtLilCa7zA&t=3837s" target="_blank"><em>Sobre o desenvolvimento histórico da psicogênese</em></a>. Seminário no Grupo de Filosofia e Epistemologia Genética. Marília, Brasil (2025)</li>
       <li><a href="https://www.academia.edu/123035879/Etnograf%C3%ADa_psicogen%C3%A9tica_Reconstrucci%C3%B3n_del_proceso_de_diferenciaci%C3%B3n_cognitiva_de_dos_sociedades_en_la_Sierra_Nevada_de_Santa_Marta" target="_blank"><em>Etnografía psicogenética. Reconstrucción del proceso de diferenciación cognitiva de dos sociedades en la Sierra Nevada de Santa Marta.</em></a>. Congreso de la  Asosiación Latinoamericana de Antropología ALA. Rosario, Argentina (2024)</li>
