--- a/index.html
+++ b/index.html
@@ -184,6 +184,12 @@
           <iframe width="100%" height="270" src="https://www.youtube.com/embed/ht5MbnvsjBo" title="Fotopoestía Mi perro muerto" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </li>
+      <li>
+        <span style="font-style:italic;">Fragmento etnográfico: entrenamiento de infantes ikʉ a las crías de perro para ser cazadores.</span>
+        <div style="max-width: 480px;">
+          <iframe width="100%" height="270" src="https://www.youtube.com/embed/9kSkYXbF63k" title="Fragmento etnográfico: entrenamiento de infantes ikʉ a las crías de perro para ser cazadores." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </li>
     </ul>
     <h3 style="margin-top:2em;"></h3>
     <h3 style="margin-top:2em;">Cursos cortos que he tomado</h3>
@@ -259,6 +265,9 @@
         <div style="font-size:0.97em; color:#444; margin-top:0.4em;">
           Desde 2021 trabajo junto a Santiago Dussan, Daniel Velásquez, Daniela Rocha, Santiago Forero, Mamo Bernardo Torres y con la colaboración de muchísimas personas en la producción de este documental. Actualmente (2025) dedicamos seis horas semanales a la postproducción de la película. Tenemos un primer corte de la introducción que, en crudo, tiene alrededor de 35 minutos. Estamos trabajando en el segundo corte.<br><br>
           En los buscadores de internet puedes encontrar más información con el hashtag <strong>#LasSeñoritasDocumental</strong>, además puedes ver este <a href="https://www.youtube.com/watch?v=R-GUZlFA-s0&t=22s" target="_blank">teaser en YouTube</a>, un <a href="https://www.youtube.com/watch?v=bYxCDBWEKTI&t=4s" target="_blank">detrás de cámaras de la primera parte del rodaje</a>. En las secciones de entrevistas y revistas científicas también puedes encontrar más información.
+        </div>
+        <div style="max-width: 480px; margin-top:1em;">
+          <iframe width="100%" height="270" src="https://www.youtube.com/embed/qjYHGqwu6MI" title="Las Señoritas Documental - avance" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </li>
     </ul>
