--- a/index.html
+++ b/index.html
@@ -183,6 +183,10 @@
         <div style="max-width: 480px;">
           <iframe width="100%" height="270" src="https://www.youtube.com/embed/ht5MbnvsjBo" title="Fotopoestía Mi perro muerto" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
+        <div style="font-size:0.95em; color:#555; margin-top:0.4em;">
+          Seleção oficial Mostra de fotofilmes Mundo em Foco no <a href="https://www.todesplay.com.br" target="_blank">www.todesplay.com.br</a>, dezembro 09 a 20 (2022)
+        <br><br>
+        </div>
       </li>
       <li>
         <span style="font-style:italic;">Fragmento etnográfico: entrenamiento de infantes ikʉ a las crías de perro para ser cazadores.</span>
